CS_PROD_20150209_01/Metadata/unpackaged/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCORE__Details__c</fullName>
        <inlineHelpText>Jurisdictions that were applied to the SalesTax Calculation, including name and rate.  Cannot be Edited.</inlineHelpText>
        <label>Sales Tax Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__LineTax__c</fullName>
        <inlineHelpText>Sales Tax Calculated For This Line - Cannot Be Edited</inlineHelpText>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__LineTotal__c</fullName>
        <formula>TotalPrice  +  AVA_SFCORE__LineTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Rate__c</fullName>
        <inlineHelpText>Tax Rate applied to this line.  Cannot be Edited</inlineHelpText>
        <label>Sales Tax Rate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_Services_Product__c</fullName>
        <formula>ISPICKVAL(PricebookEntry.Product2.Family,&quot;Global Analysis Services&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Analysis Services Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Opportunity_Product_ID__c</fullName>
        <description>Created by LM on 2/13/14 for Phase2</description>
        <label>CRM Opportunity Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Product_Name__c</fullName>
        <description>Created by LM on 3/3/2014 for Phase2</description>
        <label>CRM Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Total__c</fullName>
        <description>Created by LM on 2/13/14 for Phase2</description>
        <label>CRM Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissionable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commissionable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Years_Quantity__c</fullName>
        <label>Last Years Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Years_Sales_Price__c</fullName>
        <label>Last Years Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Product__c</fullName>
        <formula>PricebookEntry.Product2.Workflow_Managed_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Services Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewable_Product__c</fullName>
        <label>Renewable Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 10/24/2013 for Phase 2 rollout</description>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow_Analysis_Services_Product__c</fullName>
        <label>Workflow Analysis Services Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workflow_Managed_Services_Product__c</fullName>
        <label>Workflow Managed Services Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw2__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>